syntax = "proto2";

import "scalapb/scalapb.proto";

option (scalapb.options) = {
  package_name: "it.pagopa.pdnd.interop.uservice.agreementmanagement.model.persistence.serializer.v1"
};

message AgreementV1 {
  required string id = 1;
  required string eserviceId = 2;
  required string producerId = 3;
  required string consumerId = 4;
  required string status = 5;
}